fixing image align

--- a/assets/css/style-about-confirm.css
+++ b/assets/css/style-about-confirm.css
@@ -185,7 +185,7 @@ body {
 }
 
 .about-text1 p{  
-    margin-top: 5%;
+    margin-top: 10%;
     margin-left: 8%;
     width: 60%;
     text-align: left;
@@ -204,7 +204,7 @@ body {
     grid-column-end: 2;
     grid-row-start:3;
     grid-row-end: 3;
-    margin-top: 0%;
+    margin-top: -3%;
     margin-left: 35%;
     /* background-color:#33333398;  */
 }
@@ -284,11 +284,20 @@ body {
     }
 
     .text-about{
+        margin-top: 0%;
         font-size: 0.7rem;
     }
     .about-text1 p{
         margin-top: 25%;
         font-size: 0.7rem;
+    }
+
+    .about-img2{
+        margin-top: 3%;
+    }
+
+    .about-img3{
+        margin-top: 17%;
     }
 
 }
